--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: multipass.pls
 Type: Package
-Title: What the package does (short line)
+Title: Wrapper functions to plr and cppls functions to run multiple passes and outlier elimination
 Version: 1.0
 Date: 2015-02-05
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
+Author: J-F Rami
+Maintainer: J-F Rami <rami@cirad.fr>
+Description: Wrapper functions to plr and cppls functions to run multiple passes and outlier elimination
+License: GPL (>= 2)
